--- a/web/index.html
+++ b/web/index.html
@@ -6,31 +6,28 @@ and open the template in the editor.
 -->
 <html>
 <head>
-  <title>Firebase Login</title>
-  <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css" />
+   <title>DermaApp</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilosLogin.css" rel="stylesheet" media="all">
 </head>
 <body>
-
-  <div id="login_div" class="main-div">
-    <h3>CancerApp Login</h3>
-    <input type="email" placeholder="Email..." id="email_field" />
-    <input type="password" placeholder="Password..." id="password_field" />
-
-    <button onclick="login()">Login to Account</button>
-  </div>
-
-  <div id="user_div" class="loggedin-div">
-    <h3>Bienvenido</h3>
-    <p id="user_para">Welcome to Firebase web login Example. You're currently logged in.</p>
-    <button onclick="logout()">Logout</button>
-	<select name="sometext" multiple="multiple">
- 
- </select>
-  </div>
-
-
-
+        <header class="main-header">
+            <a href="" class="title-header">Derma App</a>
+        </header>
+        
+        <div class="login-page">
+            <h2 class="login-title">Login</h2>
+            <div class="form">
+              <form>
+                <input type="email" id="email_field" name="txtLoginUsuario" placeholder="Email"/>
+                <input type="password" id="password_field" name="txtLoginClave" placeholder="Clave"/>
+                 <button onclick="login()">Login to Account</button>
+                <p class="message">Soy nuevo, quiero <a href="registroDermatologo.html">Registrarme</a></p>
+              </form>
+            </div>
+        </div>
+    </body>
   
 <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase.js"></script>
 <script>
@@ -44,6 +41,7 @@ and open the template in the editor.
     messagingSenderId: "644286998392"
   };
   firebase.initializeApp(config);
+
 </script>
 
 <script src="js/index.js"></script>
