--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -231,7 +231,7 @@
                                                 <td>Jose </td>
                                                 <td>Jose </td>
                                                 <td>Jose </td>
-                                                <td><button onclick="login()"> Ver</button></td
+                                                <td><button onclick="login()"> Ver</button></td>
                 
                                             </tr>
                                           
